--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "express-validator": "^5.2.0",
     "fbgraph": "^1.4.4",
     "instagram-node": "^0.5.8",
+    "intersection-observer": "^0.5.1",
     "jquery": "^3.3.1",
     "js-polyfills": "^0.1.42",
     "lastfm": "^0.9.2",
