--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "stripe": "^6.1.1",
     "twilio": "^3.17.5",
     "twit": "^2.2.11",
-    "validator": "^10.4.0"
+    "validator": "^10.4.0",
+    "gulp": "^3.9.1"
   },
   "devDependencies": {
     "browser-sync": "^2.24.5",
